--- a/cn.zh-CN/Python SDK/快速开始.md
+++ b/cn.zh-CN/Python SDK/快速开始.md
@@ -18,10 +18,10 @@
         pip install aliyun-python-sdk-core
         ```
 
-    -   如果您使用Python 2.x，执行以下命令，安装阿里云SDK核心库：
+    -   如果您使用Python 3.x，执行以下命令，安装阿里云SDK核心库：
 
         ```
-        pip install aliyun-python-sdk-ecs
+        pip install aliyun-python-sdk-core-v3
         ```
 
 2.  安装云产品的SDK。
