脚本无法识别region-id的问题
"<your-region-id>"这个后面短个逗号，否则无法识别region-id，即使是正确的

--- a/cn.zh-CN/Python SDK/快速开始.md
+++ b/cn.zh-CN/Python SDK/快速开始.md
@@ -48,7 +48,7 @@
     client = AcsClient(
        "<your-access-key-id>", 
        "<your-access-key-secret>",
-       "<your-region-id>"
+       "<your-region-id>",
     );
     # 创建request，并设置参数
     request = DescribeInstancesRequest.DescribeInstancesRequest()
